--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,18 @@
 .container {
-	width: 1000px;
-	height: 1000px;
+	width: 400px;
+	height: 400px;
+	margin: 0 auto;
+	border: 1px solid #000;
+
+}
+
+.box {
+	height: 25px;
+	width: 25px;
+	float: left;
+
+}
+
+.black {
+	background-color: #000;
 }
